--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
-<!DOCTYPE html> <!--“tells” the browser that the page is going to use HTML 5-->
-<html> <!--The <html> is the root element of an HTML page-->
-<head> <!--The head contains the meta information about the page-->
-<title>Sample Web Page</title>
-</head>
+<!DOCTYPE html> 
 
-<body> <!--The body contains the elements for the visible contents of the page-->
-<h1>This is a heading</h1> <!--The h1 and p tags are just examples of tags that we can use-->
-<p>This is the first paragraph of text</p>
-<hr /> <!--The hr is a horizontal rule, typically represented as a straight line-->
-<p>This is the second paragraph of text</p>
-</body>
+<html> 
+    <head> 
+        <title> Sample Web Page </title>
+    </head>
+
+    <body> 
+        <div class="flex-container">
+            <div>
+                Logo and Navigation Bar
+                *Insert Logo and Navigation Bar*
+            </div>
+            <div>
+                Featured Photo
+                *Insert Featured Photo here*
+            </div>
+            <div>
+                Previous Projects:
+                Java - Local 2-Player Coop Delivery Game
+                Python - Local Stock Portfolio (w/out database)
+                C - Local Airline Management System (w/out database)
+            </div>
+            <div>
+                Skills and Autobiography
+                Hi! My name is Hugz Bernados, currently studying BS Computer Science in UPLB. 
+                As I spend my time here, I am currently learning more about programming and further honing my skills.
+                Nice to meet you!
+            </div>
+            <div>
+                Address/Contact Information, and Personal Website
+                Back to Top
+            </div>
+        </div>
+        
+    </body>
+
 </html>
