style: added CSS external file draft

--- a/index.html
+++ b/index.html
@@ -2,32 +2,37 @@
 
 <html> 
     <head> 
-        <title> Sample Web Page </title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title> My Webpage </title>
     </head>
 
     <body> 
         <div class="flex-container">
-            <div>
-                Logo and Navigation Bar
-                *Insert Logo and Navigation Bar*
+            <div class="flex-item">
+                <h1> Logo and Navigation Bar </h1>
+                <p> *Insert Logo Here* </p>
             </div>
-            <div>
-                Featured Photo
-                *Insert Featured Photo here*
+            <div class="flex-item">
+                <h1> Featured Photo </h1>
+                <p>*Insert Featured Photo Here</p>
             </div>
-            <div>
-                Previous Projects:
+            <div class="flex-item">
+                <h1> Previous Projects: </h1>
+                <p>
                 Java - Local 2-Player Coop Delivery Game
                 Python - Local Stock Portfolio (w/out database)
                 C - Local Airline Management System (w/out database)
+                </p>
             </div>
-            <div>
-                Skills and Autobiography
+            <div class="flex-item">
+                <h1>Skills and Autobiography </h1>
+                <p>
                 Hi! My name is Hugz Bernados, currently studying BS Computer Science in UPLB. 
                 As I spend my time here, I am currently learning more about programming and further honing my skills.
                 Nice to meet you!
+                </p>
             </div>
-            <div>
+            <div class="flex-item">
                 Address/Contact Information, and Personal Website
                 Back to Top
             </div>
