Error in pushing passed on time

--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
     <body> 
         <div class="flex-container">
             <div class="flex-item">
-                <h1> Logo and Navigation Bar </h1>
-                <p> *Insert Logo Here* </p>
+                <img class="logo" src="https://i.pinimg.com/736x/c3/2c/a8/c32ca8188b7fd323fa153959d92fd453.jpg"> 
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Me</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Send Money Pls</a></li>
+                </ul> 
             </div>
+
             <div class="flex-item">
-                <h1> Featured Photo </h1>
-                <p>*Insert Featured Photo Here</p>
+                <h1>
+                    <img class="self" src="https://scontent.fmnl33-1.fna.fbcdn.net/v/t1.15752-9/477043314_610526268351751_2164364391705328986_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=9f807c&_nc_ohc=6fMqSfz-H7QQ7kNvgGdWSHx&_nc_zt=23&_nc_ht=scontent.fmnl33-1.fna&oh=03_Q7cD1gGKSoHaLOWVRy7FrSR5uXOZloAowSeqJwqjXWw2Ypiskw&oe=67D50E71">
+                </h1>
             </div>
+
             <div class="flex-item">
-                <h1> Previous Projects: </h1>
-                <p>
-                Java - Local 2-Player Coop Delivery Game
-                Python - Local Stock Portfolio (w/out database)
-                C - Local Airline Management System (w/out database)
-                </p>
+                <h1> Previous Projects </h1>
+                <p> Java - Local 2-Player Coop Delivery Game </p>
+                <p> Python - Local Stock Portfolio (w/out database) </p>
+                <p> C - Local Airline Management System (w/out database) </p>
             </div>
             <div class="flex-item">
                 <h1>Skills and Autobiography </h1>
                 <p>
-                Hi! My name is Hugz Bernados, currently studying BS Computer Science in UPLB. 
-                As I spend my time here, I am currently learning more about programming and further honing my skills.
-                Nice to meet you!
+                Hi! My name is Hugz Bernados, currently studying BS Computer Science in UPLB. I am experienced
+                with Python, C, and Java and currently studying about HTML and CSS. I am capable of managing a small team to accomplish
+                what is tasked upon us.
+                As I spend my time here, I am currently learning more about other programming and 
+                further honing my skills. Nice to meet you!
                 </p>
             </div>
             <div class="flex-item">
-                Address/Contact Information, and Personal Website
-                Back to Top
+                A5 Legacy Apartment, Kanluran Road, Batong Malake, Los Banos
+                / 09760223712
             </div>
         </div>
         
